--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,6 @@ name: TerrainGeneration
 version: '${project.version}'
 main: com.example.terraingeneration.TerrainGeneration
 api-version: '1.21'
+commands:
+  gen:
+    usage: /<command>
